--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 
   <style>
     body {
-      margin: 0;
-      overflow: hidden;
-      background: black;
-      color: white;
-      font-family: Arial;
-    }
+  background-image: url("사진주소");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
     #particles-js {
       position: fixed;
