--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
     body {
-  background-image: url("사진주소");
+  background-image: url("https://pin.it/6NNmmwPNM");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
